# psa-squash-rankings-scraper

./: .gitignore  LICENSE  README.md  __init__.py  api_scraper.py  config.py  data_parser.py  exporter.py  html_scraper.py  logger.py  parser.py  pyproject.toml  requirements.txt  run_scraper.py  schema.py  validator.py
.github/workflows/: CI.yml  publish.yml
src/psa_squash_rankings/: __init__.py  api_scraper.py  cli.py  config.py  data_parser.py  exporter.py  html_scraper.py  logger.py  schema.py  squashinfo_scraper.py  validator.py
tests/: conftest.py  test_api_scraper.py  test_checkpoints.py  test_cli.py  test_exporter.py  test_html_scraper.py  test_parser.py  test_schema.py  test_squashinfo_scraper.py  test_validator.py
