[project]
name = "psa-squash-rankings-scraper"
version = "1.0.0"
description = "A robust Python-based web scraper for PSA Squash Tour rankings"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ruff]
ignore = ["F841"]
