[project]
name = "psa-squash-rankings"
version = "1.0.0"
description = "A Python library for fetching PSA Squash Tour rankings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["squash", "psa", "scraper", "rankings", "sports", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Scraping",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/psa-squash-rankings"
Repository = "https://github.com/yourusername/psa-squash-rankings"
Issues = "https://github.com/yourusername/psa-squash-rankings/issues"

[project.scripts]
psa-scrape = "psa_squash_rankings.cli:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ruff]
ignore = ["F841", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=psa_squash_rankings --cov-report=term-missing"